(failed attempt to) fix ConnectionThread

--- a/android-studio-project/Hauk/src/main/res/xml/network_security.xml
+++ b/android-studio-project/Hauk/src/main/res/xml/network_security.xml
@@ -6,8 +6,8 @@
         cleartextTrafficPermitted="true"
         tools:ignore="InsecureBaseConfiguration">
         <trust-anchors>
-            <certificates src="system" />
-            <certificates src="user" />
+            <certificates src="system" overridePins="true" />
+            <certificates src="user"   overridePins="true" />
         </trust-anchors>
     </base-config>
 </network-security-config>
